--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Title of the document</title>
+  <title>Dashboard Customer Profile</title>
 </head>
 <body>
 
