--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dashboard DCSL</title>
+  <title>Dashboard Customer Profile</title>
 </head>
 <body>
 
 
 <iframe 
- src="https://app.powerbi.com/reportEmbed?reportId=290883c4-49c6-4b16-b408-dd2ae0fb856a&autoAuth=true&ctid=a4ebe425-4925-48ef-98eb-e11db5d8427e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWVhc3QtYXNpYS1iLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D"
+ src="https://app.powerbi.com/reportEmbed?reportId=abda1443-4a3f-4a81-8731-2d7c6af31d4e&autoAuth=true&ctid=a4ebe425-4925-48ef-98eb-e11db5d8427e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWVhc3QtYXNpYS1iLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D"
  frameborder="0" allowFullScreen="true"
 style="overflow:hidden; height:100%; width:100%; position: absolute; top: 0; left: 0; bottom: 0; right: 0;" height="100%" width="100%"></iframe>
 
