--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 
 <iframe 
- src="https://app.powerbi.com/reportEmbed?reportId=abda1443-4a3f-4a81-8731-2d7c6af31d4e&autoAuth=true&ctid=a4ebe425-4925-48ef-98eb-e11db5d8427e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWVhc3QtYXNpYS1iLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D"
- frameborder="0" allowFullScreen="true"
+src="https://app.powerbi.com/reportEmbed?reportId=dbcf9065-4aff-42c0-a1fa-c16fbd4220e2&autoAuth=true&ctid=a4ebe425-4925-48ef-98eb-e11db5d8427e&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWVhc3QtYXNpYS1iLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
 style="overflow:hidden; height:100%; width:100%; position: absolute; top: 0; left: 0; bottom: 0; right: 0;" height="100%" width="100%"></iframe>
 
 </body>
